objects/copadoQuality__Functional_Review__c.object
<CustomObject>
    <fields>
        <fullName>copadoQuality__Config_JSON__c</fullName>
        <label>Config JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Description__c</fullName>
        <inlineHelpText>Provide an outline about e.g. which parts of your application it should focus on, or where to find further information. Include links to documentation and videos to enable your reviewers.</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specify the Epic to which this review might be related.</inlineHelpText>
        <label>Epic</label>
        <referenceTo>copado__Epic__c</referenceTo>
        <relationshipLabel>Functional Reviews</relationshipLabel>
        <relationshipName>Functional_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Extension_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Extension Configuration</label>
        <referenceTo>copado__ExtensionConfiguration__c</referenceTo>
        <relationshipLabel>Functional Reviews</relationshipLabel>
        <relationshipName>Functional_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this to specify if the review is for a specific Feature.</inlineHelpText>
        <label>Feature</label>
        <referenceTo>copado__Application_Feature__c</referenceTo>
        <relationshipLabel>Functional Reviews</relationshipLabel>
        <relationshipName>Functional_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Planned_Date__c</fullName>
        <inlineHelpText>Optional: Date when the review should happen.</inlineHelpText>
        <label>Planned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Review_Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If available, select the Environment where the review should take place. If provided and if there&apos;s an active org credential, Copado will aim to auto-log in users when starting a review.</inlineHelpText>
        <label>Review Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Functional Reviews</relationshipLabel>
        <relationshipName>Functional_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Review_Outcome__c</fullName>
        <inlineHelpText>Provide a summary of the review. Feel free to link to further tracking sources like Spreadsheets or quip documents. This can be partially auto-generated with comments from the individual reviews or with AI generated summaries.</inlineHelpText>
        <label>Review Outcome</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Review_Target_URL__c</fullName>
        <label>Review Target URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Functional Review</label>
    <listViews>
        <fullName>copadoQuality__All</fullName>
        <columns>NAME</columns>
        <columns>copadoQuality__Planned_Date__c</columns>
        <columns>copadoQuality__Review_Environment__c</columns>
        <columns>copadoQuality__Epic__c</columns>
        <columns>copadoQuality__Feature__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Functional Review Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Functional Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>copadoQuality__Epic_and_Feature_populated</fullName>
        <active>true</active>
        <description>A Functional Review cannot be linked to both an Epic and a Feature.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(copadoQuality__Epic__c)),NOT(ISBLANK(copadoQuality__Feature__c)))</errorConditionFormula>
        <errorMessage>Review session can be created only for one epic or feature. Both values can not be provided at the same time.</errorMessage>
    </validationRules>
</CustomObject>